--- a/assets/css/pagefind.css
+++ b/assets/css/pagefind.css
@@ -9,7 +9,7 @@
 #search {
 max-width: 600px;
 margin: 20px auto 0px;
-border: solid 2px rgb(100,100,100);
+border: solid 2px var(--search-border);
 border-radius: 50px;
 padding: 1px;
 z-index: 999;
