--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 :root {
 --text-color: #E1E132;
+--search-border: #5F5F00;
 --link-color: #00FFFF;
 --bg-color: black;
 --header-bg-color: #1c1c1e;
