--- a/assets/css/pagefind.css
+++ b/assets/css/pagefind.css
@@ -1,11 +1,18 @@
 :root {
---pagefind-ui-primary: #eeeeee;
---pagefind-ui-text: #eeeeee;
---pagefind-ui-background: transparent;
---pagefind-ui-border: #152028;
---pagefind-ui-tag: #152028;
+--pagefind-ui-scale: 1;
+--pagefind-ui-primary: #034ad8;
+--pagefind-ui-text: #393939;
+--pagefind-ui-background: #ffffff;
+--pagefind-ui-border: #eeeeee;
+--pagefind-ui-tag: #eeeeee;
+--pagefind-ui-border-width: 2px;
+--pagefind-ui-border-radius: 8px;
+--pagefind-ui-image-border-radius: 8px;
+--pagefind-ui-image-box-ratio: 3 / 2;
+--pagefind-ui-font: sans-serif;
 }
 
+/*
 #search {
 max-width: 600px;
 margin: 20px auto 0px;
@@ -34,3 +41,4 @@ border-radius: 50px;
 text-align: center;
 padding: 10px;
 }
+*/
