--- a/assets/css/pagefind.css
+++ b/assets/css/pagefind.css
@@ -3,13 +3,13 @@
 --pagefind-ui-text: var(--text-color);
 --pagefind-ui-background: #152028;
 --pagefind-ui-border: #152028;
---pagefind-ui-tag: #152028;
+--pagefind-ui-tag: var(--text-color);
 --pagefind-ui-scale: 1;
 --pagefind-ui-border-width: 2px;
 --pagefind-ui-border-radius: 8px;
 --pagefind-ui-image-border-radius: 8px;
 --pagefind-ui-image-box-ratio: 3 / 2;
---pagefind-ui-font: sans-serif;
+--pagefind-ui-font: var(--font-family);
 }
 
 /*
