--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,17 @@
 @import url('https://fonts.bunny.net/css?family=nunito:300,400,600,700');
 
 :root {
+--text-color: black;
+--search-border: #5F5F00;
+--link-color: #00FFFF;
+--bg-color: white;
+--header-bg-color: #1c1c1e;
+--header-bg-color: black;
+--small-font: 14px;
+--font-family: 'Nunito', sans-serif;
+}
+
+[data-theme="dark"] {
 --text-color: #E1E132;
 --search-border: #5F5F00;
 --link-color: #00FFFF;
