--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -24,6 +24,7 @@ width: 35px;
 margin-right: 7px;
 border-radius: 3px;
 background-color: transparent;
+border: 2px solid black;
 }
 
 .site-title a {
