--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,8 +2,6 @@ header {
 background-color: var(--header-bg-color);
 }
 
-
-
 .container {
 padding: 15px;
   margin: 0 auto;
@@ -15,15 +13,11 @@ padding: 15px;
   align-items: center;
 }
 
-[data-theme="dark"] .site-title img {
-background-color: var(--text-color);
-}
-
 .site-title img {
 width: 35px;
 margin-right: 7px;
 border-radius: 3px;
-background-color: transparent;
+background-color: var(--logo-background);
 border: 2px solid black;
 }
 
