--- a/assets/css/pagefind.css
+++ b/assets/css/pagefind.css
@@ -1,6 +1,20 @@
 :root {
 --pagefind-ui-primary: black;
 --pagefind-ui-text: var(--text-color);
+--pagefind-ui-background: var(--bg-color);
+--pagefind-ui-border: #152028;
+--pagefind-ui-tag: var(--text-color);
+--pagefind-ui-scale: 1;
+--pagefind-ui-border-width: 2px;
+--pagefind-ui-border-radius: 8px;
+--pagefind-ui-image-border-radius: 8px;
+--pagefind-ui-image-box-ratio: 3 / 2;
+--pagefind-ui-font: var(--font-family);
+}
+
+[data-theme="dark"] {
+--pagefind-ui-primary: black;
+--pagefind-ui-text: var(--text-color);
 --pagefind-ui-background: #152028;
 --pagefind-ui-border: #152028;
 --pagefind-ui-tag: var(--text-color);
@@ -10,6 +24,7 @@
 --pagefind-ui-image-border-radius: 8px;
 --pagefind-ui-image-box-ratio: 3 / 2;
 --pagefind-ui-font: var(--font-family);
+
 }
 
 #search {
