--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -17,7 +17,7 @@ padding: 15px;
 width: 35px;
 margin-right: 7px;
 border-radius: 3px;
-background-color: var(--logo-background);
+background-color: var(--logo-bg-color);
 border: 2px solid black;
 }
 
