--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 :root {
 --text-color: black;
---search-border: #5F5F00;
+--search-border-color: black;
 --link-color: blue;
 --bg-color: #FFFDD0;
 --header-bg-color: #FFFDD0;
