--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 --logo-bg-color: transparent;
 --small-font: 14px;
 --font-family: 'Nunito', sans-serif;
+--light-bg-color: var(--light-bg-color);
 }
 
 [data-theme="dark"] {
@@ -16,6 +17,7 @@
 --search-border-color: grey;
 --link-color: #00FFFF;
 --bg-color: black;
+--light-bg-color: rgb(30,30,30);
 --header-bg-color: black;
 --small-font: 14px;
 --font-family: 'Nunito', sans-serif;
