--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -12,7 +12,7 @@ label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: #ffffff; /* Light color for labels */
+  color: var(--text-color); /* Light color for labels */
 }
 
 input[type="text"],
@@ -20,12 +20,9 @@ input[type="email"],
 textarea {
   width: 90%;
   padding: 10px;
-  border: 1px solid #444; /* Dark border */
   border-radius: 4px;
-  background-color: #2a2a2a; /* Dark background for inputs */
-  color: #ffffff; /* Light text color for inputs */
-  font-size: 16px;
-  transition: border-color 0.3s;
+  background-color: var(--light-bg-color); /* Dark background for inputs */
+  color: var(--text-color); /* Light text color for inputs */
 }
 
 input[type="text"]:focus,
