--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -23,7 +23,8 @@ textarea {
   border-radius: 4px;
   background-color: var(--light-bg-color); /* Dark background for inputs */
   color: var(--text-color); /* Light text color for inputs */
-  transition: border-color 0.3s;
+  border: 0px;
+  font-size: var(--font-size);
 }
 
 input[type="text"]:focus,
