--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -3,6 +3,30 @@
 
 <div class="home">
 
+<section class="featured-boxes">
+  <div class="container">
+    <div class="row">
+      {{ range .Site.Params.featured_boxes }}
+        <div class="col-md-3">
+          <div class="box">
+            <div class="icon">
+              <i class="mdi {{ .icon }}"></i>
+            </div>
+            <div class="content">
+              <h3>{{ .title }}</h3>
+              <p>{{ .excerpt }}</p>
+            </div>
+          </div>
+        </div>
+      {{ end }}
+    </div>
+  </div>
+</section>
+
+
+
+
+
 <div class="heading"><a href="/blog">{{ i18n "latestBlog" }}</a></div>
 
 <div class="latest-posts-container">
