--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -3,6 +3,29 @@
 
 <div class="home">
 
+
+<div class="featured-boxes">
+  {{ range .Site.Params.featured_boxes }}
+    <div class="featured-box">
+      <a href="{{ .link }}" class="box-link">
+        <div class="icon">
+          <i class="{{ .icon }}"></i>
+        </div>
+        <div class="content">
+          <h3>{{ .title }}</h3>
+          <p>{{ .description }}</p>
+        </div>
+      </a>
+    </div>
+  {{ end }}
+</div>
+
+
+
+
+
+
+
 <div class="heading"><a href="/blog">{{ i18n "latestBlog" }}</a></div>
 
 <div class="latest-posts-container">
