--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -181,7 +181,7 @@ text-decoration: none;
   padding: 15px;
   width: 250px;  /* Fixed width for boxes */
   text-align: center;
-  transition: transform 0.3s ease;
+  /*transition: transform 0.3s ease;*/
   cursor: pointer;
 }
 
