--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -216,7 +216,7 @@ text-decoration: none;
 /* Hover effect */
 .featured-box:hover {
   /*transform: translateY(-5px);*/
-  border-color: var(--link-color);  /* Highlight border on hover */
+  border-color: var(--light-text-color);  /* Highlight border on hover */
 }
 .featured-box:hover a {
 text-decoration: none;
