--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.bunny.net/css?family=nunito:300,400,600,700');
 
-:root {
+[data-theme="light"] {
 --font-size: 18px; 
 --text-color: black;
 --light-text-color: grey;
