--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -4,6 +4,11 @@
 <div class="home">
 
 
+<div class="citation">
+{{ i18n "citation" }}
+</div>
+
+
 <div class="featured-boxes">
   {{ range .Site.Params.featured_boxes }}
     <div class="featured-box">
