--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,9 @@
 .home .citation {
 max-width: 300px;
+margin: auto;
 text-align: center;
+font-size: 25px;
+font-style: italic;
 }
 
 .home .quick-links {
