--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 --small-font: 14px;
 --font-family: 'Nunito', sans-serif;
 --logo-bg-color: var(--text-color);
---border: 2px solid #444;
+--border-color: #444;
 }
 
 [data-theme="light"] {
