--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -24,10 +24,10 @@ color: var(--text-color);
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
+gap: 20px;
 }
 
 .home .quick-links-group {
-margin: 10px;
 padding: 15px;
 border-radius: 5px;
 width: 260px;
