--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,11 +13,12 @@
       {{- range $folders }}
         {{- if and (.IsDir) (not (strings.HasSuffix .Name ".hide")) }}
           {{- $indexFile := (print $contentDir "/" .Name "/_index.md") -}}
+          {{- $title := "" -}} <!-- Initialize $title -->
           {{- if fileExists $indexFile }}
             {{- $indexContent := readFile $indexFile | transform.Unmarshal -}}
-            {{- $title := $indexContent.title | default (.Name | title) -}}
+            {{- $title = $indexContent.title | default (.Name | title) -}}
           {{- else }}
-            {{- $title := .Name | title -}}
+            {{- $title = .Name | title -}}
           {{- end }}
           <div class="footer-column">
             <h4>{{ $title }}</h4>
@@ -26,11 +27,12 @@
               {{- range $subfolders }}
                 {{- if and (.IsDir) (not (strings.HasSuffix .Name ".hide")) }}
                   {{- $subIndexFile := (print $contentDir "/" .Name "/" .Name "/_index.md") -}}
+                  {{- $subTitle := "" -}} <!-- Initialize $subTitle -->
                   {{- if fileExists $subIndexFile }}
                     {{- $subIndexContent := readFile $subIndexFile | transform.Unmarshal -}}
-                    {{- $subTitle := $subIndexContent.title | default (.Name | humanize) -}}
+                    {{- $subTitle = $subIndexContent.title | default (.Name | humanize) -}}
                   {{- else }}
-                    {{- $subTitle := .Name | humanize -}}
+                    {{- $subTitle = .Name | humanize -}}
                   {{- end }}
                   <li><a href="{{ "/" | relURL }}{{ .Name }}">{{ $subTitle }}</a></li>
                 {{- end }}
