--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -9,6 +9,27 @@
 </div>
 
 
+<section class="container">
+  <div class="grid">
+    {{ $pages := where site.RegularPages "Params.hide" "!=" true }}
+    {{ range $pages }}
+    <div class="box">
+      {{ if .Params.icon }}
+      <div class="icon">
+        <i class="fas {{ .Params.icon }}"></i>
+      </div>
+      {{ end }}
+      <h3 class="title">{{ .Title }}</h3>
+      {{ if .Params.description }}
+      <p class="description">{{ .Params.description }}</p>
+      {{ end }}
+      <a href="{{ .Permalink }}" class="read-more">Read More</a>
+    </div>
+    {{ end }}
+  </div>
+</section>
+
+
 <div class="featured-boxes">
   {{ range .Site.Params.featured_boxes }}
     <div class="featured-box">
