--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -9,10 +9,11 @@
 </div>
 
 
+{{ define "main" }}
 <section class="container">
   <div class="grid">
-    {{ $pages := where site.RegularPages "Params.hide" "!=" true }}
-    {{ range $pages }}
+    <!-- Include top-level folders (sections) -->
+    {{ range .Site.Sections }}
     <div class="box">
       {{ if .Params.icon }}
       <div class="icon">
@@ -26,8 +27,27 @@
       <a href="{{ .Permalink }}" class="read-more">Read More</a>
     </div>
     {{ end }}
+    
+    <!-- Include top-level files -->
+    {{ range .Site.RegularPages }}
+    {{ if eq (len (strings.Split .File.Path "/")) 2 }} <!-- Ensure it’s a top-level file -->
+    <div class="box">
+      {{ if .Params.icon }}
+      <div class="icon">
+        <i class="fas {{ .Params.icon }}"></i>
+      </div>
+      {{ end }}
+      <h3 class="title">{{ .Title }}</h3>
+      {{ if .Params.description }}
+      <p class="description">{{ .Params.description }}</p>
+      {{ end }}
+      <a href="{{ .Permalink }}" class="read-more">Read More</a>
+    </div>
+    {{ end }}
+    {{ end }}
   </div>
 </section>
+{{ end }}
 
 
 <div class="featured-boxes">
