--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -290,6 +290,7 @@ text-decoration: none;
 .list-box h3 {
   color: var(--text-color);  /* White text for the title */
   font-size: 1.2em;
+   margin: 0px auto 10px;
 }
 
 /* Description styles */
