--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -16,6 +16,7 @@
     <div class="featured-box">
       <a href="{{ .link }}" class="box-link">
         <div class="icon">
+         {{< figure src="/images/icons/{{ .icon }}" >}}
           <i class="{{ .icon }}"></i>
         </div>
         <div class="content">
