--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -17,9 +17,10 @@
       <a href="{{ .link }}" class="box-link">
         <div class="icon">
 
-        <!--
-        {{< figure src="/images/icons/{{ .icon }}" >}}
-        -->
+         <figure>
+         <img src="{{ .icon }}">
+         </figure>
+
           <i class="{{ .icon }}"></i>
         </div>
         <div class="content">
