--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -17,9 +17,7 @@
       <a href="{{ .link }}" class="box-link">
         <div class="icon">
 
-         <figure>
-         <img src="/images/icons/{{ .icon }}" >
-         </figure>
+         {{< {{ .icon }} >}}
 
           <i class="{{ .icon }}"></i>
         </div>
