--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -17,7 +17,7 @@
       <a href="{{ .link }}" class="box-link">
         <div class="icon">
 
-         {{ partial "{{ .icon }}" }}
+         {{ partial "{{ .icon }}.html" }}
 
           <i class="{{ .icon }}"></i>
         </div>
