--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -206,9 +206,8 @@ text-decoration: none;
 
 /* Icon styles */
 .featured-box .icon {
-  font-size: 40px;
-  color: var(--text-color);  /* White icon color */
-  margin-bottom: 10px;
+  margin: auto;
+  width: 60px;
 }
 
 /* Title styles */
