--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -207,7 +207,7 @@ text-decoration: none;
 /* Icon styles */
 .featured-box .icon {
   margin: 20px auto 0px;
-  width: 60px;
+  height: 60px;
 }
 
 /* Title styles */
