--- a/layouts/partials/icons/cross.html
+++ b/layouts/partials/icons/cross.html
@@ -37,4 +37,5 @@
        class="st0"
        points="87.16,28.3 87.16,51.47 55.17,51.47 55.17,122.88 31.99,122.88 31.99,51.47 0,51.47 0,28.3 31.99,28.3 31.99,0 55.17,0 55.17,28.3 87.16,28.3"
        id="polygon1"
-       style="fill:var(--text-color);fill-opacity:1" /></g></svg>
+       style="fill:var(--text-color);fill-opacity:1" /></g>
+</svg>
