--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -9,105 +9,12 @@
 </div>
 
 <div class="citation">
-
 {{ i18n "citation" }}
-
 </div>
 
-<div class="featured-boxes">
-  {{ range .Site.Params.featured_boxes }}
-    <div class="featured-box">
-      <a href="{{ .link }}" class="box-link">
-        <div class="icon">
-         {{ partial (printf "%s.html" .icon) . }}
-        </div>
-        <div class="content">
-          <h3>{{ .title }}</h3>
-          <p>{{ .description }}</p>
-        </div>
-      </a>
-    </div>
-  {{ end }}
-</div>
-
-<!--
-<div class="heading"><a href="/blog">{{ i18n "latestBlog" }}</a></div>
-
-<div class="latest-posts-container">
-  {{ $posts := where (where .Site.Pages "Type" "blog") "Kind" "page" }}
-  {{ $latestPosts := first 5 (sort $posts "Date" "desc") }}
-  {{ range $latestPosts }}
-  <div class="post-item">
-    <a href="{{ .Permalink }}">
-      {{ with .Params.image }}
-      <img class="post-image" src="{{ . }}" alt="{{ $.Title }}">
-      {{ else }}
-      <img class="post-image" src="/images/default-thumbnail.jpg" alt="{{ .Title }}">
-      {{ end }}
-    </a>
-    <h3 class="post-title">
-      <a href="{{ .Permalink }}">{{ .Title }}</a>
-    </h3>
-  </div>
-  {{ end }}
-</div>
--->
-
-<div class="quick-links">
-    {{ if .Site.Params.quickLinks }}
-        <div class="quick-links-container">
-            {{ range sort .Site.Params.quickLinks ".order" }}
-                <div class="quick-links-group">
-                    <div class="title">
-                        <a href="{{ .url }}">{{ .title }}</a>
-                    </div>
-                    <ul>
-                        {{ range .links }}
-                            <li><a href="{{ .url }}">{{ .title }}</a></li>
-                        {{ end }}
-                    </ul>
-                </div>
-            {{ end }}
-        </div>
-    {{ end }}
-</div>
-
-{{ $pages := .Pages }}
-{{ $sortedPages := sort $pages "File.Path" }}
-
-{{ $customSort := slice }}
-{{ range $sortedPages }}
-  {{ $filename := .File.LogicalName }}
-  {{ $parentDir := path.Base .File.Dir }}
-
-  {{ if not (or (strings.HasSuffix $filename ".hide") (strings.HasSuffix $parentDir ".hide")) }}
-    {{ if eq $filename "_index.md" }}
-      {{ $customSort = $customSort | append (dict "page" . "sortKey" $parentDir "permalink" .Permalink) }}
-    {{ else }}
-      {{ $customSort = $customSort | append (dict "page" . "sortKey" $filename "permalink" .Permalink) }}
-    {{ end }}
-  {{ end }}
-{{ end }}
-
-{{ $sortedCustom := sort $customSort "sortKey" }}
-
-<div class="list-boxes">
-  {{ range $sortedCustom }}
-    <div class="list-box">
-      <a href="{{ .permalink | relURL }}" class="box-link">
-        <div class="icon">
-          <i class="{{ .page.Params.icon }}"></i> <!-- Icon from frontmatter -->
-        </div>
-        <div class="content">
-          <h3>{{ .page.Title }}</h3> <!-- Title from frontmatter -->
-          {{ with .page.Params.description }}
-            <p>{{ . }}</p> <!-- Description from frontmatter -->
-          {{ end }}
-        </div>
-      </a>
-    </div>
-  {{ end }}
-</div>
+{{ partial "home/featured-boxes.html" . }}
+{{ partial "home/quick-links.html" . }}
+{{ partial "home/list-boxes.html" . }}
 
 </div>
 
