--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,12 @@
 {{ partial "postnav.html" . }}
 <h1>{{ .Title }}</h1>
 
-{{ .TableOfContents }}
+{{ if .Params.toc }}
+<div class="table-of-contents">
+    <h3>Table of Contents</h3>
+    {{ .TableOfContents }}
+</div>
+{{ end }}
 
 {{ partial "x.html" . }}
 
