--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,8 +9,7 @@
 <article>
 
 {{ if .Params.toc }}
-<div class="table-of-contents">
-    <h3>Table of Contents</h3>
+<div class="toc">
     {{ .TableOfContents }}
 </div>
 {{ end }}
