--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,6 +16,17 @@
 {{ end }}
 
 {{ .Content }}
+
+
+<div id="cusdis_thread"
+  data-host="https://cusdis.com"
+  data-app-id="8e7720be-66d0-4d22-bdc6-389d4ae51295"
+  data-page-id="{{ PAGE_ID }}"
+  data-page-url="{{ PAGE_URL }}"
+  data-page-title="{{ PAGE_TITLE }}"
+></div>
+<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+
 </article>
 
 <footer>
