--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,9 +21,9 @@
 <div id="cusdis_thread"
   data-host="https://cusdis.com"
   data-app-id="8e7720be-66d0-4d22-bdc6-389d4ae51295"
-  data-page-id="{{ PAGE_ID }}"
-  data-page-url="{{ PAGE_URL }}"
-  data-page-title="{{ PAGE_TITLE }}"
+  data-page-id="{{ .File.UniqueID }}"
+  data-page-url="{{ .Permalink }}"
+  data-page-title="{{ .Title }}"
 ></div>
 <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
 
