--- a/layouts/partials/cusdis.html
+++ b/layouts/partials/cusdis.html
@@ -1,9 +1,8 @@
-<div class="comments">
+<div id="cusdis_thread"
   data-host="https://cusdis.com"
   data-app-id="8e7720be-66d0-4d22-bdc6-389d4ae51295"
   data-page-id="{{ .File.UniqueID }}"
   data-page-url="{{ .Permalink }}"
   data-page-title="{{ .Title }}"
->
-</div>
+></div>
 <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
