--- a/layouts/partials/cusdis.html
+++ b/layouts/partials/cusdis.html
@@ -4,5 +4,6 @@
   data-page-id="{{ .File.UniqueID }}"
   data-page-url="{{ .Permalink }}"
   data-page-title="{{ .Title }}"
+  data-theme="dark"
 ></div>
 <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
