--- a/layouts/partials/cusdis.html
+++ b/layouts/partials/cusdis.html
@@ -7,3 +7,8 @@
   data-theme="dark"
 ></div>
 <script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+
+
+<script defer src="https://i.emote.com/js/emote.js"> </script>
+<div id="emote_com"></div>
+            
