--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -19,7 +19,9 @@
 
 </article>
 
-{{ partial "cusdis.html" . }}
+{{ if ne .Params.comments false }}
+{{ partial "comments.html" . }}
+{{ end }}
 
 <footer>
 {{ partial "footer.html" . }}
