--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,7 +15,7 @@
 
 <link href="/pagefind/pagefind-ui.css" rel="stylesheet">
 <script src="/pagefind/pagefind-ui.js"></script>
-<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+<script src="https://cusdis.com/js/cusdis.es.js"></script>
 
 <!-- Load style.css first -->
 {{ $style := resources.Get "css/style.css" }}
