--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -8,4 +8,10 @@
   data-theme="dark"
 ></div>
 </div>
+<script src="https://cusdis.com/js/cusdis.es.js"></script>
+<style>
+#cusdis_thread {
+background: transparent;
+}
+</style>
 
