--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -11,7 +11,7 @@
 <script src="https://cusdis.com/js/cusdis.es.js"></script>
 <style>
 #cusdis_thread {
-background: transparent;
+background: transparent !important;
 }
 </style>
 
