--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -9,6 +9,7 @@
 ></div>
 </div>
 <script src="https://cusdis.com/js/cusdis.es.js"></script>
+<link rel="stylesheet" href="{{ "css/comments.css" | relURL }}">
 
 <style>
 /* More specific selector */
