--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,10 +10,16 @@
 
 <article>
 {{ .Content }}
-</article>
 
 {{ partial "listposts.html" . }}
 
+</article>
+
+{{ if ne .Params.comments false }}
+{{ partial "comments.html" . }}
+{{ end }}
+
 </div>
+
 {{ end }}
 
