--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -15,7 +15,7 @@
 {{ partial "home/featured-boxes.html" . }}
 {{ partial "home/quick-links.html" . }}
 {{ partial "home/list-boxes.html" . }}
-{{ partial "home/curator.html" . }}
+{{ partial "home/feeds.html" . }}
 </div>
 
 {{ end }}
