--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
     <div class="header-content">
       <div class="site-title">
         <a href="/">
-          <img src="/images/logo.png">
+          <img src="/images/logo.png" alt="{{ .Site.Title }}">
           <span>{{ .Site.Title }}</span>
         </a>
       </div>
@@ -18,8 +18,8 @@
           {{ range .Site.Menus.main }}
           <li>
             <a href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>
-              {{ with .icon }}
-                {{ partial (print . ".html") . }}
+              {{ if .icon }}
+                {{ partial (printf "icons/%s.html" .icon) . }}
               {{ end }}
               {{ .Name }}
             </a>
