--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -18,8 +18,8 @@
           {{ range .Site.Menus.main }}
           <li>
             <a href="{{ .URL }}" {{ if .Params.target }}target="{{ .Params.target }}"{{ end }}>
-              {{ if .icon }}
-                {{ partial (printf "icons/%s.html" .icon) . }}
+              {{ with .Params.icon }}
+                {{ partial (printf "icons/%s.html" .) . }}
               {{ end }}
               {{ .Name }}
             </a>
