--- a/layouts/partials/icons/rosary.html
+++ b/layouts/partials/icons/rosary.html
@@ -1,89 +1,19 @@
-<svg
-   fill="#000000"
-   height="800px"
-   width="800px"
-   version="1.1"
-   id="Capa_1"
-   viewBox="0 0 59.674 59.674"
-   xml:space="preserve"
-   sodipodi:docname="rosary-svgrepo-com.svg"
-   inkscape:version="1.3.2 (091e20ef0f, 2023-11-25)"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:svg="http://www.w3.org/2000/svg"><defs
-   id="defs13" /><sodipodi:namedview
-   id="namedview13"
-   pagecolor="#505050"
-   bordercolor="#eeeeee"
-   borderopacity="1"
-   inkscape:showpageshadow="0"
-   inkscape:pageopacity="0"
-   inkscape:pagecheckerboard="0"
-   inkscape:deskcolor="#505050"
-   inkscape:zoom="0.9025"
-   inkscape:cx="399.44598"
-   inkscape:cy="400"
-   inkscape:window-width="1598"
-   inkscape:window-height="898"
-   inkscape:window-x="0"
-   inkscape:window-y="0"
-   inkscape:window-maximized="1"
-   inkscape:current-layer="Capa_1" />
-<g
-   id="g13"
-   style="fill:var(--text-color);fill-opacity:1">
-	<path
-   d="M33.837,47.513l3.399-1.929c0.48-0.272,0.648-0.883,0.376-1.363l-2.425-4.272c-0.131-0.231-0.349-0.401-0.606-0.471   c-0.256-0.07-0.53-0.035-0.761,0.098l-3.352,1.922l-1.94-3.418c-0.271-0.479-0.879-0.649-1.359-0.378l-4.322,2.428   c-0.232,0.13-0.402,0.348-0.474,0.604s-0.038,0.53,0.094,0.762l1.942,3.422l-3.402,1.932c-0.48,0.272-0.648,0.883-0.376,1.363   l2.425,4.272c0.131,0.23,0.348,0.4,0.604,0.47c0.255,0.071,0.529,0.038,0.759-0.094l3.402-1.932l4.28,7.54   c0.422,0.745,1.217,1.208,2.073,1.208c0.411,0,0.817-0.107,1.175-0.311l1.901-1.079c0.555-0.315,0.953-0.828,1.122-1.444   c0.168-0.615,0.086-1.259-0.231-1.813L33.837,47.513z"
-   id="path1"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M25.337,8c2.206,0,4-1.794,4-4s-1.794-4-4-4s-4,1.794-4,4S23.131,8,25.337,8z"
-   id="path2"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M34.337,9c2.206,0,4-1.794,4-4s-1.794-4-4-4s-4,1.794-4,4S32.131,9,34.337,9z"
-   id="path3"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M43.337,11c2.206,0,4-1.794,4-4s-1.794-4-4-4c-2.206,0-4,1.794-4,4S41.131,11,43.337,11z"
-   id="path4"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M48.337,10c-2.206,0-4,1.794-4,4s1.794,4,4,4s4-1.794,4-4S50.543,10,48.337,10z"
-   id="path5"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M45.337,18c-2.206,0-4,1.794-4,4s1.794,4,4,4s4-1.794,4-4S47.543,18,45.337,18z"
-   id="path6"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M38.337,24c-2.206,0-4,1.794-4,4s1.794,4,4,4s4-1.794,4-4S40.542,24,38.337,24z"
-   id="path7"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M27.337,34c0,2.206,1.794,4,4,4s4-1.794,4-4s-1.794-4-4-4S27.337,31.794,27.337,34z"
-   id="path8"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M17.337,11c2.206,0,4-1.794,4-4s-1.794-4-4-4s-4,1.794-4,4S15.131,11,17.337,11z"
-   id="path9"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M12.337,18c2.206,0,4-1.794,4-4s-1.794-4-4-4s-4,1.794-4,4S10.131,18,12.337,18z"
-   id="path10"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M15.337,23c0-2.206-1.794-4-4-4s-4,1.794-4,4s1.794,4,4,4S15.337,25.206,15.337,23z"
-   id="path11"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M17.337,32c0-2.206-1.794-4-4-4s-4,1.794-4,4s1.794,4,4,4S17.337,34.206,17.337,32z"
-   id="path12"
-   style="fill:var(--text-color);fill-opacity:1" />
-	<path
-   d="M17.337,36c-2.206,0-4,1.794-4,4s1.794,4,4,4s4-1.794,4-4S19.542,36,17.337,36z"
-   id="path13"
-   style="fill:var(--text-color);fill-opacity:1" />
-</g>
+<!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+<svg height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
+	 viewBox="0 0 57.674 57.674" xml:space="preserve">
+<path style="fill:#805333;" d="M33.317,39.442l-4.222,2.422l-2.436-4.292L22.337,40l2.436,4.292l-4.272,2.425l2.425,4.272
+	l4.272-2.425l4.774,8.41c0.377,0.664,1.221,0.897,1.885,0.52l1.901-1.079c0.666-0.378,0.898-1.226,0.517-1.89l-4.805-8.385
+	l4.272-2.425L33.317,39.442z"/>
+<circle style="fill:#805333;" cx="24.337" cy="3" r="3"/>
+<circle style="fill:#805333;" cx="33.337" cy="4" r="3"/>
+<circle style="fill:#805333;" cx="42.337" cy="6" r="3"/>
+<circle style="fill:#805333;" cx="47.337" cy="13" r="3"/>
+<circle style="fill:#805333;" cx="44.337" cy="21" r="3"/>
+<circle style="fill:#805333;" cx="37.337" cy="27" r="3"/>
+<circle style="fill:#805333;" cx="30.337" cy="33" r="3"/>
+<circle style="fill:#805333;" cx="16.337" cy="6" r="3"/>
+<circle style="fill:#805333;" cx="11.337" cy="13" r="3"/>
+<circle style="fill:#805333;" cx="10.337" cy="22" r="3"/>
+<circle style="fill:#805333;" cx="12.337" cy="31" r="3"/>
+<circle style="fill:#805333;" cx="16.337" cy="39" r="3"/>
 </svg>
