--- a/layouts/partials/icons/rosary.html
+++ b/layouts/partials/icons/rosary.html
@@ -1,19 +1,55 @@
-<!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-<svg height="800px" width="800px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
-	 viewBox="0 0 57.674 57.674" xml:space="preserve">
-<path style="fill:#805333;" d="M33.317,39.442l-4.222,2.422l-2.436-4.292L22.337,40l2.436,4.292l-4.272,2.425l2.425,4.272
-	l4.272-2.425l4.774,8.41c0.377,0.664,1.221,0.897,1.885,0.52l1.901-1.079c0.666-0.378,0.898-1.226,0.517-1.89l-4.805-8.385
-	l4.272-2.425L33.317,39.442z"/>
-<circle style="fill:#805333;" cx="24.337" cy="3" r="3"/>
-<circle style="fill:#805333;" cx="33.337" cy="4" r="3"/>
-<circle style="fill:#805333;" cx="42.337" cy="6" r="3"/>
-<circle style="fill:#805333;" cx="47.337" cy="13" r="3"/>
-<circle style="fill:#805333;" cx="44.337" cy="21" r="3"/>
-<circle style="fill:#805333;" cx="37.337" cy="27" r="3"/>
-<circle style="fill:#805333;" cx="30.337" cy="33" r="3"/>
-<circle style="fill:#805333;" cx="16.337" cy="6" r="3"/>
-<circle style="fill:#805333;" cx="11.337" cy="13" r="3"/>
-<circle style="fill:#805333;" cx="10.337" cy="22" r="3"/>
-<circle style="fill:#805333;" cx="12.337" cy="31" r="3"/>
-<circle style="fill:#805333;" cx="16.337" cy="39" r="3"/>
-</svg>
+<svg
+   version="1.1"
+   id="Layer_1"
+   x="0px"
+   y="0px"
+   viewBox="0 0 50.000001 67.000001"
+   xml:space="preserve"
+   sodipodi:docname="chaplet-icon.svg"
+   width="50"
+   height="67"
+   inkscape:version="1.3.2 (091e20ef0f, 2023-11-25)"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:svg="http://www.w3.org/2000/svg"><defs
+     id="defs1" /><sodipodi:namedview
+     id="namedview1"
+     pagecolor="#505050"
+     bordercolor="#eeeeee"
+     borderopacity="1"
+     inkscape:showpageshadow="0"
+     inkscape:pageopacity="0"
+     inkscape:pagecheckerboard="0"
+     inkscape:deskcolor="#505050"
+     inkscape:zoom="6.0791017"
+     inkscape:cx="43.180722"
+     inkscape:cy="39.973011"
+     inkscape:window-width="1598"
+     inkscape:window-height="898"
+     inkscape:window-x="0"
+     inkscape:window-y="0"
+     inkscape:window-maximized="1"
+     inkscape:current-layer="Layer_1" /><style
+     type="text/css"
+     id="style1">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style><g
+     id="g1"
+     transform="matrix(0.40687958,0,0,0.40687958,0.00149689,0.2089118)"
+     style="fill:var(--text-color);fill-opacity:1"><path
+       class="st0"
+       d="m 61.44,54.76 c 4.18,0 7.89,2.02 10.2,5.14 2.39,-1.29 4.69,-2.62 6.9,-4 -0.07,-0.45 -0.11,-0.91 -0.11,-1.37 0,-4.81 3.9,-8.71 8.71,-8.71 1.46,0 2.83,0.36 4.04,0.99 2.12,-1.78 4.13,-3.61 6.02,-5.5 -1.11,-1.67 -1.76,-3.67 -1.76,-5.82 0,-5.81 4.71,-10.52 10.52,-10.52 1.22,0 2.39,0.21 3.49,0.59 4.09,-7 6.95,-14.6 8.54,-22.81 0.26,-1.34 1.55,-2.21 2.89,-1.96 1.34,0.26 2.21,1.55 1.96,2.89 -1.72,8.86 -4.82,17.05 -9.24,24.57 1.79,1.89 2.89,4.43 2.89,7.24 0,5.81 -4.71,10.52 -10.52,10.52 -1.87,0 -3.62,-0.49 -5.14,-1.34 -1.91,1.92 -3.94,3.79 -6.08,5.6 0.71,1.26 1.11,2.71 1.11,4.26 0,4.81 -3.9,8.71 -8.71,8.71 -2.56,0 -4.86,-1.11 -6.46,-2.86 -2.23,1.37 -4.54,2.7 -6.93,3.99 0.25,0.99 0.38,2.02 0.38,3.09 0,7.01 -5.68,12.69 -12.69,12.69 -7.01,0 -12.69,-5.68 -12.69,-12.69 0,-0.67 0.05,-1.32 0.15,-1.96 -2.93,-1.32 -5.76,-2.77 -8.47,-4.37 -1.53,1.32 -3.51,2.11 -5.69,2.11 -4.81,0 -8.71,-3.9 -8.71,-8.71 0,-1.24 0.26,-2.42 0.73,-3.49 -1.49,-1.37 -2.93,-2.8 -4.33,-4.29 C 22,46.28 21.56,45.8 21.13,45.31 19.95,45.77 18.67,46.02 17.33,46.02 11.51,46.01 6.8,41.3 6.8,35.5 6.8,32.78 7.83,30.31 9.52,28.44 5.58,20.98 2.41,12.54 0.07,3.05 -0.26,1.73 0.55,0.39 1.87,0.07 c 1.32,-0.32 2.66,0.48 2.98,1.8 2.19,8.88 5.13,16.78 8.77,23.77 1.15,-0.43 2.39,-0.67 3.69,-0.67 5.81,0 10.52,4.71 10.52,10.52 0,2.67 -1,5.11 -2.64,6.97 0.28,0.31 0.56,0.62 0.84,0.92 1.26,1.35 2.56,2.64 3.9,3.88 1.38,-0.91 3.03,-1.44 4.8,-1.44 4.81,0 8.71,3.9 8.71,8.71 0,0.85 -0.12,1.67 -0.35,2.45 2.41,1.41 4.91,2.7 7.5,3.88 2.23,-3.66 6.26,-6.1 10.85,-6.1 z m 0,8.32 c 2.42,0 4.38,1.96 4.38,4.38 0,2.42 -1.96,4.38 -4.38,4.38 -2.42,0 -4.38,-1.96 -4.38,-4.38 0,-2.42 1.96,-4.38 4.38,-4.38 z"
+       id="path1"
+       style="fill:var(--text-color);fill-opacity:1" /></g><style
+     type="text/css"
+     id="style1-5">.st0{fill-rule:evenodd;clip-rule:evenodd;}</style><polygon
+     class="st0"
+     points="55.17,28.3 87.16,28.3 87.16,51.47 55.17,51.47 55.17,122.88 31.99,122.88 31.99,51.47 0,51.47 0,28.3 31.99,28.3 31.99,0 55.17,0 "
+     id="polygon1"
+     transform="matrix(0.20760952,0,0,0.20760952,15.952377,41.008357)"
+     style="fill:var(--text-color);fill-opacity:1" /><rect
+     style="fill:var(--text-color);fill-opacity:1;stroke-width:0.821659"
+     id="rect1"
+     width="1.5569839"
+     height="21.59519"
+     x="24.221508"
+     y="30.349522" /></svg>
