--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -12,6 +12,7 @@
 {{ i18n "citation" }}
 </div>
 
+{{ partial "home/home-sections.html" . }}
 {{ partial "home/featured-boxes.html" . }}
 {{ partial "home/quick-links.html" . }}
 {{ partial "home/list-boxes.html" . }}
