--- a/layouts/partials/home/home-sections.html
+++ b/layouts/partials/home/home-sections.html
@@ -1,3 +1,4 @@
+<div class="home-sections">
 {{ range .Params.homepage_sections }}
 <section id="{{ .id }}" class="homepage-section">
   <div class="section-header">
@@ -16,3 +17,5 @@
   </div>
 </section>
 {{ end }}
+
+</div>
