--- a/layouts/partials/home/home-sections.html
+++ b/layouts/partials/home/home-sections.html
@@ -1,7 +1,7 @@
-
 <div class="home-sections">
   {{ range .Params.homepage_sections }}
   <section id="{{ .id }}" class="homepage-section">
+  hhhhhhh
     <div class="section-header">
       <h2>{{ .headline }}</h2>
       <p>{{ .description }}</p>
