--- a/layouts/_default/index.html
+++ b/layouts/_default/index.html
@@ -13,6 +13,7 @@
 </div>
 
 {{ partial "home/home-sections.html" . }}
+oooooo
 
 {{ partial "home/featured-boxes.html" . }}
 {{ partial "home/quick-links.html" . }}
