--- a/layouts/partials/home/home-sections.html
+++ b/layouts/partials/home/home-sections.html
@@ -1,4 +1,6 @@
 <div class="home-sections">
+oooooooooooooojjjjjjjjj:w
+
   {{ range .Params.homepage_sections }}
   <section id="{{ .id }}" class="homepage-section">
     <div class="section-header">
