--- a/layouts/partials/home/home-sections.html
+++ b/layouts/partials/home/home-sections.html
@@ -1,7 +1,5 @@
 <div class="home-sections">
-oooooooooooooojjjjjjjjj:w
-
-  {{ range .Params.homepage_sections }}
+  {{ range .Site.Params.homepage_sections }}
   <section id="{{ .id }}" class="homepage-section">
     <div class="section-header">
       <h2>iii{{ .headline }}</h2>
