--- a/layouts/partials/home/home-sections.html
+++ b/layouts/partials/home/home-sections.html
@@ -2,7 +2,7 @@
   {{ range .Site.Params.homepage_sections }}
   <section id="{{ .id }}" class="homepage-section">
     <div class="section-header">
-      <h2>iii{{ .headline }}</h2>
+      <h2>{{ .headline }}</h2>
       <p>{{ .description }}</p>
       <a href="#" class="explore-button">{{ .button_text }}</a>
     </div>
