--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -226,21 +226,24 @@ text-decoration: none;
 .section-header h2 {
   font-size: 2rem;
   margin-bottom: 0.5rem;
+  text-align: center;
 }
 
 .section-header p {
   font-size: 1rem;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .explore-button {
-  display: inline-block;
+  display: block;
   padding: 0.5rem 1rem;
   color: #ffffff;
   background-color: #3a3a3a;
   text-decoration: none;
   border-radius: 5px;
   transition: background 0.3s;
+  text-align: center;
 }
 
 .explore-button:hover {
