--- a/layouts/partials/home/home-sections.html
+++ b/layouts/partials/home/home-sections.html
@@ -4,7 +4,7 @@
     <div class="section-header">
       <h2>{{ .headline }}</h2>
       <p>{{ .description }}</p>
-      <a href="#" class="explore-button">{{ .button_text }}</a>
+      <a href="{{ .url }}" class="explore-button">{{ .button_text }}</a>
     </div>
     <div class="section-content grid">
       {{ range .posts }}
