--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -218,26 +218,26 @@ text-decoration: none;
 
 
 .homepage-section {
-  margin-bottom: 2rem;
+   margin: 90px 0px 0px 0px;
   border-radius: 8px;
 }
 
 .section-header h2 {
-  font-size: 2rem;
+  font-size: 40px;
   margin-bottom: 0.5rem;
   text-align: center;
 }
 
 .section-header p {
   font-size: 1rem;
-  margin-bottom: 1rem;
   text-align: center;
+  margin: 0px 0px 30px 0px;
 }
 
 .explore-button {
   display: block;
   padding: 0.5rem 1rem;
-  margin: 0px auto 20px;
+  margin: 0px auto 40px;
   color: #ffffff;
   background-color: #3a3a3a;
   text-decoration: none;
