--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -260,8 +260,7 @@ text-decoration: none;
 
 .box {
   display: block;
-  width: calc(25% - 1rem); /* Default: 4 boxes per row */
-  max-width: 300px; /* Prevent overly wide boxes on large screens */
+  max-width: 100%;
   text-align: center;
   border-radius: 8px;
   overflow: hidden;
@@ -273,7 +272,7 @@ text-decoration: none;
 
 .box img {
   width: 100%;
-  height: 150px;
+  height: 200px;
   object-fit: cover;
 }
 
